Select all text in input element when you enable editor. Input element of editor has the same "cssText" property of anchor element. But this still not solve input height when anchor element is wrapped in a <h4>

--- a/src/main/webapp/css/descriptionInspector.css
+++ b/src/main/webapp/css/descriptionInspector.css
@@ -294,18 +294,8 @@ a.bulkSelectAll, a.bulkSelectNone { cursor: pointer; }
 /* Model inspector */
 /* reader mode */
 #inspectorModelContent span.editorModelElement a[ng-hide='editorEnabled'] {
-	background: rgba(212, 198, 54, 0.15);
+	background: rgba(212, 198, 54, 0.25);
     line-height: 15px;
     border: 0;
     color: #333;
-}
-
-/* writer mode */
-#inspectorModelContent span.editorModelElement input[ng-model] {
-	background: rgba(212, 198, 54, 0.15);
-    line-height: 15px;
-    border: 0;
-    border-bottom: 1px dotted #888;
-    color: #333;
-    outline: none;
 }
